Fix issue that caused creatures to appear off screen; move scoreboard to bottom; generate creatures at bottom of screen first, then progress upward

--- a/features/2018/space-invaders/src/partials/_story.scss
+++ b/features/2018/space-invaders/src/partials/_story.scss
@@ -48,6 +48,7 @@
 
 #story {
 	position: relative;
+	margin-bottom: 6rem;
 }
 
 #story-header {
