--- a/features/2018/space-invaders/src/space-invaders.scss
+++ b/features/2018/space-invaders/src/space-invaders.scss
@@ -35,44 +35,43 @@
 
 #scoreboard {
 	
-	position: relative;
-	z-index: 20;
-	top: 0;
+	position: fixed;
+	z-index: 10;
+	bottom: 0;
 	left: 0;
 	width: 100%;
-	max-width: 800px;
 	box-sizing: border-box;
-	margin: 0 auto 4rem;
-	background: #000;
+	margin: 0 auto;
+	background: #7da1ff;
 	color: #fff;
 	font-family: "VCR Mono", "Press Start 2P", "Roboto Mono", "Lato", sans-serif;
+	font-size: 1rem;
 	text-transform: uppercase;
 	transition: all .2s ease-in-out;
 	
-	&.fixed {
-		
-		position: fixed;
-		max-width: 100%;
-		
-		#scores {
-			padding: 1rem;
-		}
-		
-		.score {
-			font-size: 1rem;
-		}
-		
-		.label {
-			font-size: .8rem;
-		}
-
+	&:before {
+		content: '';
+		display: block;
+		position: absolute;
+		top: -100px;
+		left: 0;
+		width: 100%;
+		height: 100px;
+		background-image: url(i/landscape-marine-1.png);
+		background-position: center bottom;
+		background-repeat: repeat-x;
+		background-size: 512px auto;
+	}
+	
+	&.fluid {
+		position: relative;
 	}
 	
 	#scores {
 		
 		display: flex;
 		width: 100%;
-		padding: 2rem;
+		padding: 1rem;
 		box-sizing: border-box;
 		
 		&>div {
@@ -87,7 +86,6 @@
 		width: 100%;
 		height: 30px;
 		background: #333;
-		font-size: .5rem;
 		line-height: 30px;
 	}
 	
@@ -121,14 +119,16 @@
 	}
 	
 	.score {
-		font-size: 1.5rem;
+		display: inline-block;
 		margin-bottom: .5rem;
+		margin-left: .5rem;
 	}
 	
 	.label {
-		font-size: 1rem;
+		display: inline-block;
 	}
 	
+	/*
 	#spawned .score {
 		color: #4bbed3;
 	}
@@ -140,5 +140,6 @@
 	#remaining .score {
 		color: #d95858;
 	}
+	*/
 	
 }
